test/fail/Sections-15.agda
open import Common.Prelude

test : Bool → Nat
test = if_then 4 Common.Prelude.else 5
